# Conduit

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  TROUBLESHOOTING.md  config.sample.json  install.sh  rust-toolchain.toml  test_close.rs
.github/workflows/: ci.yml
locales/: en.json  zh-CN.json
scripts/: ci-check.sh
src/: app.rs  colors.rs  i18n.rs  main.rs  network.rs  pages.rs  theme.rs  types.rs  widgets.rs
