[package]
name = "conduit"
version = "0.3.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pnet = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
serialport = "4.3"
tokio-serial = "5.4"
tray-icon = "0.22.1"
image = "0.25.9"
ksni = "0.3.4"
dirs = "6.0"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
